<resources>
    <string name="app_name">identino</string>
    <string name="login_username_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_btn_txt">Login</string>
    <string name="login_forgot_password_btn_txt">Forgot password?</string>
    <string name="courses">Courses</string>
    <string name="mark_attendance">Mark Attendance</string>
    <string name="show_summary">Summary</string>
    <string name="pop_close_btn_txt">Close</string>
    <string name="sign_out_txt">Sign Out</string>
    <string name="forgot_password_email_hint">Email</string>
    <string name="forgot_password_reset_button_text">Reset Password</string>
    <string name="forgot_password_close_popup_button_text">Close</string>
    <string name="sign_out_description">Sign Out</string>
    <string name="exit_camera">Exit</string>
    <string name="admin_add_str">Add Instructor</string>
    <string name="admin_add_instructor_str">Add Instructor</string>
    <string name="admin_add_course_str">Add Course</string>
    <string name="admin_remove_instructor_str">Remove Instructor</string>
    <string name="admin_remove_course_str">Remove Course</string>
    <string name="admin_add_student_str">Add Student</string>
    <string name="admin_remove_student_str">Remove Student</string>
    <string name="add_remove_email_hint">Email</string>
</resources>
