<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@android:color/holo_purple"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/forgot_password_popup_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:id="@+id/forgot_password_progress_bar"
            android:layout_centerInParent="true"
            android:background="@color/basic_bg"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/forgot_password_email_edit_text"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="30dp"
            android:hint="@string/forgot_password_email_hint"
            android:textColor="@color/orange"/>
        <Button
            android:id="@+id/forgot_password_reset_button"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/forgot_password_email_edit_text"
            android:textColor="@color/orange"
            android:text="@string/forgot_password_reset_button_text"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:paddingHorizontal="15dp"
            android:textSize="15sp"
            android:background="@color/theme_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
          android:background="@color/theme_gray"
            android:layout_alignParentBottom="true"
            android:id="@+id/forgot_password_close_popup_button"
            android:layout_marginTop="10dp"
            android:textColor="@color/orange"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/forgot_password_close_popup_button_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RelativeLayout>


</LinearLayout>