<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/basic_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin">
    <RelativeLayout
        android:id="@+id/admin_relative_layout"
        android:gravity="center_horizontal"

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/admin_sign_out_button"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/ic_signout1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="fitXY"/>
        <TextView
            android:id="@+id/admin_name_text_view"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:background="@color/theme_gray"
            android:textColor="@color/orange"
            android:padding="10dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:id="@+id/admin_ins_linear_layout"
            android:layout_below="@+id/admin_name_text_view"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:id="@+id/admin_add_instructor_card_view"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                app:cardElevation="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="150dp"
                android:layout_height="150dp">
                <ImageView
                    android:id="@+id/admin_add_instructor_image_view"
                    android:src="@drawable/ic_addinstructor"
                    android:scaleType="fitXY"
                    android:paddingLeft="25dp"
                    android:paddingBottom="7dp"
                    android:layout_width="125dp"
                    android:layout_height="115dp"/>
                <Button
                    android:id="@+id/admin_add_instructor_button"
                    android:background="@color/bg_second"
                    android:text="@string/admin_add_instructor_str"
                    android:layout_gravity="bottom"
                    android:padding="10dp"
                    android:textColor="@color/orange"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/admin_add_student_card_view"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                app:cardElevation="10dp"
                android:layout_width="150dp"
                android:layout_height="150dp">

                <ImageView
                    android:id="@+id/admin_remove_instructor_image_view"
                    android:src="@drawable/ic_removeinstructor"
                    android:scaleType="fitXY"
                    android:paddingLeft="25dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="11dp"
                    android:layout_width="135dp"
                    android:layout_height="110dp"/>

                <Button
                    android:id="@+id/admin_remove_instructor_button"
                    android:background="@color/bg_second"
                    android:text="@string/admin_remove_instructor_str"
                    android:layout_gravity="bottom"
                    android:padding="10dp"
                    android:textColor="@color/orange"
                    android:textSize="12sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </androidx.cardview.widget.CardView>


        </LinearLayout>
        <LinearLayout
            android:id="@+id/admin_stu_linear_layout"
            android:layout_below="@+id/admin_ins_linear_layout"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:id="@+id/admin_remove_instructor_card_view"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:cardElevation="10dp">
                <ImageView
                    android:id="@+id/admin_add_student_image_view"
                    android:src="@drawable/ic_addstudent"
                    android:scaleType="fitXY"
                    android:paddingTop="3dp"
                    android:paddingLeft="25dp"
                    android:paddingBottom="9dp"
                    android:layout_width="125dp"
                    android:layout_height="105dp"/>
                <Button
                    android:id="@+id/admin_add_student_button"
                    android:background="@color/bg_second"
                    android:text="@string/admin_add_student_str"
                    android:textAlignment="center"
                    android:textColor="@color/orange"
                    android:layout_gravity="bottom"
                    android:textSize="12sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/admin_remove_student_card_view"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:cardElevation="10dp">
                <ImageView
                    android:id="@+id/admin_remove_student_image_view"
                    android:src="@drawable/ic_removestudent"
                    android:scaleType="fitXY"
                    android:paddingLeft="25dp"
                    android:paddingBottom="9dp"
                    android:paddingTop="4dp"
                    android:layout_width="125dp"
                    android:layout_height="105dp"/>
                <Button
                    android:id="@+id/admin_remove_student_button"
                    android:background="@color/bg_second"
                    android:text="@string/admin_remove_student_str"
                    android:padding="10dp"
                    android:layout_below="@id/admin_add_student_button"
                    android:textColor="@color/orange"
                    android:textSize="12sp"
                    android:layout_gravity="bottom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </androidx.cardview.widget.CardView>

        </LinearLayout>


<LinearLayout
    android:id="@+id/admin_course_linear_layout"
    android:layout_below="@+id/admin_stu_linear_layout"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:id="@+id/admin_add_course_card_view"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cardElevation="10dp">
        <ImageView
            android:id="@+id/admin_add_course_image_view"
            android:src="@drawable/ic_addcourse"
            android:scaleType="fitXY"
            android:paddingTop="3dp"
            android:paddingLeft="10dp"
            android:layout_width="125dp"
            android:layout_height="105dp"/>
        <Button
            android:id="@+id/admin_add_course_button"
            android:background="@color/bg_second"
            android:text="@string/admin_add_course_str"
            android:layout_gravity="bottom"
            android:padding="10dp"
            android:textColor="@color/orange"
            android:textSize="12sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/admin_remove_course_card_view"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cardElevation="10dp">
        <ImageView
            android:id="@+id/admin_remove_course_image_view"
            android:src="@drawable/ic_removecourse"
            android:scaleType="fitXY"
            android:paddingLeft="25dp"
            android:paddingBottom="9dp"
            android:layout_width="125dp"
            android:layout_height="110dp"/>
        <Button
            android:id="@+id/admin_remove_course_button"
            android:background="@color/bg_second"
            android:text="@string/admin_remove_course_str"
            android:padding="10dp"
            android:layout_below="@id/admin_add_student_button"
            android:textColor="@color/orange"
            android:textSize="12sp"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.cardview.widget.CardView>

</LinearLayout>


    </RelativeLayout>


</LinearLayout>